Added the whyte font and set it as default to be used on site

--- a/index.html
+++ b/index.html
@@ -7,7 +7,5 @@
         <title>i4Brands</title>
         <link href="./dist/output.css" rel="stylesheet" />
     </head>
-    <body>
-        <h1 class="text-3xl font-bold underline">Hello world!</h1>
-    </body>
+    <body></body>
 </html>
