--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
         <title>i4Brands</title>
         <link href="./dist/output.css" rel="stylesheet" />
     </head>
-    <body></body>
+    <body>
+        <h1 class="text-5xl">Welcome to i4brands</h1>
+    </body>
 </html>
