Basic header setup

--- a/index.html
+++ b/index.html
@@ -7,7 +7,50 @@
         <title>i4Brands</title>
         <link href="./dist/output.css" rel="stylesheet" />
     </head>
-    <body>
-        <h1 class="text-5xl">Welcome to i4brands</h1>
+    <body class="bg-black text-white">
+        <header class="container py-5 lg:py-10">
+            <div class="flex justify-between">
+                <a href="./">
+                    <img
+                        src="./assets/images/i4Brands-logo.svg"
+                        alt="i4Brands logo"
+                        class="w-56 lg:w-40"
+                    />
+                </a>
+                <span
+                    class="uppercase text-xs text-right lg:w-2/12 pl-14 lg:pl-0"
+                    >i4Brands would love to hear from you.
+                    <span class="cursor-pointer underline">
+                        <a href="mailto:hello@i4brands.co.uk"
+                            >Get in touch now</a
+                        ></span
+                    ></span
+                >
+            </div>
+        </header>
+
+        <section class="pt-10 pb-20 lg:pb-64 relative">
+            <div class="container">
+                <h1
+                    class="text-lg lg:text-2xl text-center font-light tracking-wider"
+                >
+                    Welcome to i4brands.
+                </h1>
+
+                <h2
+                    class="text-4xl lg:text-[7.5rem] lg:leading-[8.75rem] text-center font-medium py-10"
+                >
+                    Your Brand Story.<br />
+                    We Take Charge.
+                </h2>
+            </div>
+            <img
+                src="./assets/images/hero - image.svg"
+                alt="Hero background"
+                class="absolute bottom-0 left-0 right-0 -z-10"
+            />
+        </section>
+
+        <footer class="container"></footer>
     </body>
 </html>
