Outline utilities created for fonts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>i4Brands</title>
         <link href="./dist/output.css" rel="stylesheet" />
     </head>
-    <body class="bg-black text-white">
+    <body class="bg-black font-primary">
         <header class="container py-5 lg:py-10">
             <div class="flex justify-between">
                 <a href="./">
@@ -18,7 +18,7 @@
                     />
                 </a>
                 <span
-                    class="uppercase text-xs text-right lg:w-2/12 pl-14 lg:pl-0"
+                    class="text-white uppercase text-xs text-right lg:w-2/12 pl-14 lg:pl-0"
                     >i4Brands would love to hear from you.
                     <span class="cursor-pointer underline">
                         <a href="mailto:hello@i4brands.co.uk"
@@ -32,16 +32,20 @@
         <section class="pt-10 pb-20 lg:pb-64 relative">
             <div class="container">
                 <h1
-                    class="text-lg lg:text-2xl text-center font-light tracking-wider"
+                    class="text-white text-lg lg:text-2xl text-center font-light tracking-wider"
                 >
                     Welcome to i4brands.
                 </h1>
 
                 <h2
-                    class="text-4xl lg:text-[7.5rem] lg:leading-[8.75rem] text-center font-medium py-10"
+                    class="text-white text-4xl leading-tight lg:text-[7.5rem] lg:leading-[8.75rem] tracking-wide lg:tracking-normal text-center font-medium pt-10 lg:pt-20 pb-6 lg:pb-10 text-outline"
                 >
-                    Your Brand Story.<br />
-                    We Take Charge.
+                    Your
+                    <span class="outlined-text-pink text-black">Brand</span>
+                    Story.<br />
+                    We
+                    <span class="outlined-text-white text-black">Take</span>
+                    Charge.
                 </h2>
             </div>
             <img
