slick slider added and imagery

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>i4Brands</title>
         <link href="./dist/output.css" rel="stylesheet" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+        />
     </head>
     <body class="bg-black font-primary">
         <header class="container py-5 lg:py-10">
@@ -55,6 +60,181 @@
             />
         </section>
 
+        <section class="py-10 lg:py-20">
+            <div class="container flex flex-wrap items-center">
+                <div class="w-full lg:w-1/4">
+                    <span
+                        class="text-sm text-white font-light tracking-widest block"
+                    >
+                        Our clients
+                    </span>
+
+                    <span class="text-2xl text-white font-light block pt-1">
+                        Our Brand Partners
+                    </span>
+                </div>
+
+                <div
+                    class="js-logos-slider w-full lg:w-3/4 flex items-center pt-5 lg:pt-0"
+                >
+                    <div class="flex items-center justify-center">
+                        <img
+                            src="./assets/images/chiquito-logo.svg"
+                            alt="chiquito logo"
+                            class="h-10 w-auto px-5 lg:px-10"
+                        />
+                    </div>
+                    <div class="flex items-center justify-center">
+                        <img
+                            src="./assets/images/wagamama-logo.svg"
+                            alt="wagamama logo"
+                            class="h-10 w-auto px-5 lg:px-10"
+                        />
+                    </div>
+                    <div class="flex items-center justify-center">
+                        <img
+                            src="./assets/images/barburrito-logo.svg"
+                            alt="barburrito logo"
+                            class="h-10 w-auto px-5 lg:px-10"
+                        />
+                    </div>
+                    <div class="flex items-center justify-center">
+                        <img
+                            src="./assets/images/malmaison-logo.svg"
+                            alt="malmaison logo"
+                            class="h-10 w-auto px-5 lg:px-10"
+                        />
+                    </div>
+                    <div class="flex items-center justify-center">
+                        <img
+                            src="./assets/images/frankie-and-bennys-logo.svg"
+                            alt="frankie and benny's logo"
+                            class="h-10 w-auto px-5 lg:px-10"
+                        />
+                    </div>
+                    <div class="flex items-center justify-center">
+                        <img
+                            src="./assets/images/zizzi-logo.svg"
+                            alt="zizzi logo"
+                            class="h-10 w-auto px-5 lg:px-10"
+                        />
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="py-5 lg:py-10">
+            <div class="container flex flex-wrap justify-between">
+                <div class="w-full lg:w-5/12 flex flex-col justify-between">
+                    <p class="text-2xl text-white">
+                        i4Brands offers a unique service to brands. We offer an
+                        all round service for any projects from managing,
+                        planning and consultancy to carrying out surveys, audits
+                        and asset registers while providing a supply,
+                        installation, maintenance and branding service.
+                    </p>
+
+                    <img
+                        src="./assets/images/craft-beers-interior.jpg"
+                        alt="interior signage"
+                        class="rounded-lg pt-10 lg:pt-0"
+                    />
+                </div>
+
+                <div class="w-full lg:w-6/12 pt-10 lg:pt-0">
+                    <h3 class="text-2xl text-white font-bold">
+                        Your preferred service partner
+                    </h3>
+
+                    <p class="text-lg text-white pt-5 lg:pt-10">
+                        i4Brands work with clients to provide a service to
+                        ensure they stand out from their competitor. i4Brands
+                        manage and maintain a Braxnds assets. First impressions
+                        are a key factor when attracting new customers. We offer
+                        a full rebrand service, or a brand re fresh but we also
+                        take in to account cost factors always advising in the
+                        first instance to persist with current assets, we
+                        guarantee to keep them working to their full potential
+                        through preventative and where required reactive
+                        maintenance with a 100% success rate for repairs and a
+                        guaranteed first time fix, where possible we are the go
+                        to company. We strive on a challenge, with a get the job
+                        done mentality.
+                    </p>
+
+                    <h3 class="text-2xl text-white font-bold pt-10">
+                        What makes us distinct
+                    </h3>
+
+                    <p class="text-lg text-white pt-5 lg:pt-10">
+                        Our proven track record of helping our clients transform
+                        the way they procure facility management and their brand
+                        to deliver savings along with service quality
+                        improvements, also a strong belief in getting the job
+                        done. We work along side procurement, Schedulers,
+                        Technical planners, electrical, fabric maintenance ,
+                        signage and installation experts to ensure you get the
+                        right results. If your second biggest cost is Facility
+                        Management and Maintenance, you should be demanding
+                        first class advice. There are so many pressures facing
+                        Facility Management functions. Things are further
+                        compounded by the complexities of the Facility
+                        Management marketplace with myriad of small suppliers
+                        through to global providers and biggest isn't always
+                        best.
+                    </p>
+                </div>
+            </div>
+            <div class="container flex flex-wrap justify-between pt-10">
+                <div class="w-full lg:w-5/12"></div>
+
+                <div class="w-full lg:w-6/12 flex flex-wrap gap-5">
+                    <button
+                        href="mailto:hello@i4brands.co.uk"
+                        class="btn-outline"
+                    >
+                        Email us now
+                    </button>
+
+                    <button href="tel:07506731023" class="btn-outline">
+                        Telephone
+                    </button>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="w-full lg:w-10/12">
+                    <h2 class="text-[40px] text-white">Our Capabilities</h2>
+                    <p class="text-white text-2xl pt-5">
+                        The principle goals of a maintenance organisation is
+                        always to improve operational reliability. In order to
+                        achieve this, a maintenance organisation must have a
+                        clear vision and strategy with established procedures
+                        and goals. It's important that everyday work includes
+                        focusing long-term on factors such as root cause
+                        analyses in corrective maintenance to raise the degree
+                        of planning over time, thereby ensuring cost effective
+                        maintenance.
+                    </p>
+                </div>
+            </div>
+        </section>
+
         <footer class="container"></footer>
+        <script
+            type="text/javascript"
+            src="//code.jquery.com/jquery-1.11.0.min.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+        ></script>
+        <script type="text/javascript" src="./src/js/LogosSlider.js"></script>
     </body>
 </html>
