--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             type="text/css"
             href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
         />
+        <script
+            src="https://kit.fontawesome.com/b838f5a310.js"
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body class="bg-black font-primary">
         <header class="container py-5 lg:py-10">
@@ -203,7 +207,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="pt-5 lg:pt-0">
             <div class="container">
                 <div class="w-full lg:w-10/12">
                     <h2 class="text-[40px] text-white">Our Capabilities</h2>
@@ -222,6 +226,155 @@
             </div>
         </section>
 
+        <section class="py-10 lg:py-20">
+            <div class="container">
+                <div class="flex flex-wrap justify-between">
+                    <div class="w-full lg:w-2/12">
+                        <div
+                            class="pb-4 border-b border-white flex justify-between w-full"
+                        >
+                            <span class="text-i4-pink block text-2xl"
+                                >i.Manage</span
+                            >
+                            <i
+                                class="fa-solid fa-arrow-right-long text-i4-pink text-2xl"
+                            ></i>
+                        </div>
+                        <div
+                            class="pt-5 pb-4 border-b border-white flex justify-between w-full"
+                        >
+                            <span class="text-i4-pink block text-2xl"
+                                >i.Consult</span
+                            >
+                            <i
+                                class="fa-solid fa-arrow-right-long text-i4-pink text-2xl"
+                            ></i>
+                        </div>
+                        <div
+                            class="pt-5 pb-4 border-b border-white flex justify-between w-full"
+                        >
+                            <span class="text-i4-pink block text-2xl"
+                                >i.Maintain</span
+                            >
+                            <i
+                                class="fa-solid fa-arrow-right-long text-i4-pink text-2xl"
+                            ></i>
+                        </div>
+                        <div
+                            class="pt-5 pb-4 border-b border-white flex justify-between w-full"
+                        >
+                            <span class="text-i4-pink block text-2xl"
+                                >i.Survey</span
+                            >
+                            <i
+                                class="fa-solid fa-arrow-right-long text-i4-pink text-2xl"
+                            ></i>
+                        </div>
+                        <div
+                            class="pt-5 pb-4 border-b border-white flex justify-between w-full"
+                        >
+                            <span class="text-i4-pink block text-2xl"
+                                >i.Install</span
+                            >
+                            <i
+                                class="fa-solid fa-arrow-right-long text-i4-pink text-2xl"
+                            ></i>
+                        </div>
+                        <div
+                            class="pt-5 pb-4 border-b border-white flex justify-between w-full"
+                        >
+                            <span class="text-i4-pink block text-2xl"
+                                >i.Audit</span
+                            >
+                            <i
+                                class="fa-solid fa-arrow-right-long text-i4-pink text-2xl"
+                            ></i>
+                        </div>
+                    </div>
+                    <div
+                        class="w-full lg:w-9/12 border-2 border-i4-pink rounded-lg p-10 lg:p-20 flex flex-wrap mt-10 lg:mt-0"
+                    >
+                        <div class="w-full lg:w-1/3">
+                            <h3 class="text-i4-pink text-[40px]">i.Manage</h3>
+                            <p class="text-white pt-10">
+                                Planning and scheduling of work<br />
+                                Asset & Equipment Management<br />
+                                Procurement Management<br />
+                                Contract Management<br />
+                                Manufacture Management <br />
+                                Project management<br />
+                                Maintenance management <br />
+                                Facilitiesmanagement <br />
+                                Property Management<br />
+                            </p>
+                        </div>
+                        <div class="w-full lg:w-2/3 lg:pl-10">
+                            <h3
+                                class="text-white font-bold text-2xl pt-10 lg:pt-0"
+                            >
+                                Your preferred service partner
+                            </h3>
+                            <p class="text-white pt-10">
+                                i4Brands work with clients to provide a service
+                                to ensure they stand out from their competitor.
+                                i4Brands manage and maintain a Brands assets.
+                                First impressions are a key factor when
+                                attracting new customers.<br /><br />
+                                We offer a full rebrand service, or a brand re
+                                fresh but we also take in to account cost
+                                factors always advising in the first instance to
+                                persist with current assets, we guarantee to
+                                keep them working to their full potential
+                                through preventative and where required reactive
+                                maintenance with a 100% success rate for repairs
+                                and a guaranteed first time fix, where possible
+                                we are the go to company.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="py-5 lg:py-10 overflow-x-hidden">
+            <div class="container">
+                <span
+                    class="text-white uppercase text-sm font-light tracking-widest block"
+                    >our work</span
+                >
+                <div class="px-0 w-[140%] sm:w-[135%] pt-10">
+                    <div class="js-work-slider -ml-2">
+                        <img
+                            src="./assets/images/malmaison-exterior.jpg"
+                            alt="malmaison exterior"
+                            class="w-full h-64 sm:h-72 md:h-64 lg:h-80 object-center object-cover px-2 rounded-3xl"
+                        />
+                        <img
+                            src="./assets/images/barker-and-stonehouse.jpg"
+                            alt="barker and stonehouse exterior"
+                            class="w-full h-64 sm:h-72 md:h-64 lg:h-80 object-center object-cover px-2 rounded-3xl"
+                        />
+                        <img
+                            src="./assets/images/chiquito-exterior.jpg"
+                            alt="chiquito exterior"
+                            class="w-full h-64 sm:h-72 md:h-64 lg:h-80 object-center object-cover px-2 rounded-3xl"
+                        />
+                        <img
+                            src="./assets/images/pizzaluxe-interior.jpg"
+                            alt="pizzaluxe exterior"
+                            class="w-full h-64 sm:h-72 md:h-64 lg:h-80 object-center object-cover px-2 rounded-3xl"
+                        />
+                        <img
+                            src="./assets/images/the-alchemist-interior.jpg"
+                            alt="alchemist exterior"
+                            class="w-full h-64 sm:h-72 md:h-64 lg:h-80 object-center object-cover px-2 rounded-3xl"
+                        />
+                    </div>
+                </div>
+                <div class="js-work-slider-dots pt-5"></div>
+            </div>
+        </section>
+
         <footer class="container"></footer>
         <script
             type="text/javascript"
@@ -236,5 +389,6 @@
             src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
         ></script>
         <script type="text/javascript" src="./src/js/LogosSlider.js"></script>
+        <script type="text/javascript" src="./src/js/WorkSlider.js"></script>
     </body>
 </html>
