--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <img
                 src="./assets/images/right-hand-image.svg"
                 alt=""
-                class="absolute -z-10 right-0 top-0"
+                class="absolute -z-10 right-0 top-0 w-1/4"
             />
         </section>
 
