--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             crossorigin="anonymous"
         ></script>
     </head>
-    <body class="bg-black font-primary">
+    <body class="bg-black font-primary overflow-x-hidden">
         <header class="container py-5 lg:py-10">
             <div class="flex justify-between">
                 <a href="./">
