--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                     </div>
                     <div class="flex items-center justify-center">
                         <img
-                            src="./assets/images/zizzi-logo.svg"
-                            alt="zizzi logo"
+                            src="./assets/images/river island - logo.svg"
+                            alt="river island logo"
                             class="h-10 w-auto px-5 lg:px-10"
                         />
                     </div>
@@ -215,7 +215,37 @@
         <section class="pt-5 lg:pt-0 relative">
             <div class="container">
                 <div class="w-full lg:w-10/12">
-                    <h2 class="text-[40px] text-white">Our Capabilities</h2>
+                    <h2 class="text-[40px] text-white">Strategic Planning</h2>
+                    <p class="text-white text-2xl pt-5">
+                        The principal goal of a maintenance organisation is
+                        always to improve operational reliability. To achieve
+                        this it is important to have a clear vision and strategy
+                        with established processes and procedures to achieve set
+                        goals and objectives. <br /><br />It’s important that
+                        everyday work includes focusing long-term on factors
+                        such as root cause analysis to raise an understanding of
+                        required planning over time, ensuring cost effective
+                        planned, preventative and reactive maintenance.
+                    </p>
+                    <h2 class="text-[40px] text-white pt-10">Data Analysis</h2>
+                    <p class="text-white text-2xl pt-5">
+                        We are experts at analysing data and presenting it back
+                        in an informative manner that you can make an informed
+                        decision on. We understand both the people and data
+                        driven decision-making requirements. Agility We’re from
+                        an operational background so we’re not afraid to
+                        challenge your thinking or act as a fresh pair of eyes.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="pt-5 lg:pt-0 relative">
+            <div class="container">
+                <div class="w-full lg:w-10/12">
+                    <h2 class="text-[40px] text-white pt-10">
+                        Our Capabilities
+                    </h2>
                     <p class="text-white text-2xl pt-5">
                         The principle goals of a maintenance organisation is
                         always to improve operational reliability. In order to
@@ -239,9 +269,67 @@
         <section class="py-10 lg:py-20 hidden lg:block">
             <div class="container">
                 <div class="flex flex-wrap justify-between">
-                    <!-- manage button-->
+                    <!-- consult button-->
                     <div
                         class="pb-4 border-b border-white flex justify-between w-2/12 mod-list"
+                    >
+                        <span class="text-white block text-2xl">i.Consult</span>
+                        <i
+                            class="fa-solid fa-arrow-right-long text-i4-pink text-2xl"
+                        ></i>
+                    </div>
+
+                    <!-- consult modal -->
+                    <div
+                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg manage-modal"
+                    >
+                        <div class="p-10 flex flex-wrap">
+                            <div class="w-full lg:w-1/3">
+                                <h3 class="text-i4-pink text-[40px]">
+                                    i.Consult
+                                </h3>
+                                <p class="text-white pt-10 leading-relaxed">
+                                    Planning and scheduling of work<br />
+                                    Asset & Equipment Management<br />
+                                    Procurement Management<br />
+                                    Contract Management<br />
+                                    Manufacture Management <br />
+                                    Project management<br />
+                                    Maintenance management <br />
+                                    Facilitiesmanagement <br />
+                                    Property Management<br />
+                                </p>
+                            </div>
+                            <div class="w-full lg:w-2/3 lg:pl-10">
+                                <h3
+                                    class="text-white font-bold text-2xl pt-10 lg:pt-0"
+                                >
+                                    Your preferred service partner
+                                </h3>
+                                <p class="text-white pt-10">
+                                    i4Brands work with clients to provide a
+                                    service to ensure they stand out from their
+                                    competitor. i4Brands manage and maintain a
+                                    Brands assets. First impressions are a key
+                                    factor when attracting new customers.<br /><br />
+                                    We offer a full rebrand service, or a brand
+                                    re fresh but we also take in to account cost
+                                    factors always advising in the first
+                                    instance to persist with current assets, we
+                                    guarantee to keep them working to their full
+                                    potential through preventative and where
+                                    required reactive maintenance with a 100%
+                                    success rate for repairs and a guaranteed
+                                    first time fix, where possible we are the go
+                                    to company.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- manage button-->
+                    <div
+                        class="pt-5 pb-4 border-b border-white flex justify-between w-2/12 mod-list"
                     >
                         <span class="text-white block text-2xl">i.Manage</span>
                         <i
@@ -297,24 +385,82 @@
                         </div>
                     </div>
 
-                    <!-- consult button-->
+                    <!-- supply button-->
                     <div
                         class="pt-5 pb-4 border-b border-white flex justify-between w-2/12 mod-list"
                     >
-                        <span class="text-white block text-2xl">i.Consult</span>
+                        <span class="text-white block text-2xl">i.Supply</span>
                         <i
                             class="fa-solid fa-arrow-right-long text-i4-pink text-2xl"
                         ></i>
                     </div>
 
-                    <!-- consult modal -->
+                    <!-- supply modal -->
                     <div
-                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg consult-modal"
+                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg supply-modal"
                     >
                         <div class="p-10 flex flex-wrap">
                             <div class="w-full lg:w-1/3">
                                 <h3 class="text-i4-pink text-[40px]">
-                                    i.Consult
+                                    i.Supply
+                                </h3>
+                                <p class="text-white pt-10 leading-relaxed">
+                                    Planning and scheduling of work<br />
+                                    Asset & Equipment Management<br />
+                                    Procurement Management<br />
+                                    Contract Management<br />
+                                    Manufacture Management <br />
+                                    Project management<br />
+                                    Maintenance management <br />
+                                    Facilitiesmanagement <br />
+                                    Property Management<br />
+                                </p>
+                            </div>
+                            <div class="w-full lg:w-2/3 lg:pl-10">
+                                <h3
+                                    class="text-white font-bold text-2xl pt-10 lg:pt-0"
+                                >
+                                    Your preferred service partner
+                                </h3>
+                                <p class="text-white pt-10">
+                                    i4Brands work with clients to provide a
+                                    service to ensure they stand out from their
+                                    competitor. i4Brands manage and maintain a
+                                    Brands assets. First impressions are a key
+                                    factor when attracting new customers.<br /><br />
+                                    We offer a full rebrand service, or a brand
+                                    re fresh but we also take in to account cost
+                                    factors always advising in the first
+                                    instance to persist with current assets, we
+                                    guarantee to keep them working to their full
+                                    potential through preventative and where
+                                    required reactive maintenance with a 100%
+                                    success rate for repairs and a guaranteed
+                                    first time fix, where possible we are the go
+                                    to company.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- install button-->
+                    <div
+                        class="pt-5 pb-4 border-b border-white flex justify-between w-2/12 mod-list"
+                    >
+                        <span class="text-white block text-2xl">i.Install</span>
+                        <i
+                            class="fa-solid fa-arrow-right-long text-i4-pink text-2xl"
+                        ></i>
+                    </div>
+
+                    <!-- install modal -->
+                    <div
+                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg install-modal"
+                    >
+                        <div class="p-10 flex flex-wrap">
+                            <div class="w-full lg:w-1/3">
+                                <h3 class="text-i4-pink text-[40px]">
+                                    i.Install
                                 </h3>
                                 <p class="text-white pt-10 leading-relaxed">
                                     Planning and scheduling of work<br />
@@ -473,64 +619,6 @@
                         </div>
                     </div>
 
-                    <!-- install button-->
-                    <div
-                        class="pt-5 pb-4 border-b border-white flex justify-between w-2/12 mod-list"
-                    >
-                        <span class="text-white block text-2xl">i.Install</span>
-                        <i
-                            class="fa-solid fa-arrow-right-long text-i4-pink text-2xl"
-                        ></i>
-                    </div>
-
-                    <!-- install modal -->
-                    <div
-                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg install-modal"
-                    >
-                        <div class="p-10 flex flex-wrap">
-                            <div class="w-full lg:w-1/3">
-                                <h3 class="text-i4-pink text-[40px]">
-                                    i.Install
-                                </h3>
-                                <p class="text-white pt-10 leading-relaxed">
-                                    Planning and scheduling of work<br />
-                                    Asset & Equipment Management<br />
-                                    Procurement Management<br />
-                                    Contract Management<br />
-                                    Manufacture Management <br />
-                                    Project management<br />
-                                    Maintenance management <br />
-                                    Facilitiesmanagement <br />
-                                    Property Management<br />
-                                </p>
-                            </div>
-                            <div class="w-full lg:w-2/3 lg:pl-10">
-                                <h3
-                                    class="text-white font-bold text-2xl pt-10 lg:pt-0"
-                                >
-                                    Your preferred service partner
-                                </h3>
-                                <p class="text-white pt-10">
-                                    i4Brands work with clients to provide a
-                                    service to ensure they stand out from their
-                                    competitor. i4Brands manage and maintain a
-                                    Brands assets. First impressions are a key
-                                    factor when attracting new customers.<br /><br />
-                                    We offer a full rebrand service, or a brand
-                                    re fresh but we also take in to account cost
-                                    factors always advising in the first
-                                    instance to persist with current assets, we
-                                    guarantee to keep them working to their full
-                                    potential through preventative and where
-                                    required reactive maintenance with a 100%
-                                    success rate for repairs and a guaranteed
-                                    first time fix, where possible we are the go
-                                    to company.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
                     <!-- audit button-->
                     <div
                         class="pt-5 pb-4 border-b border-white flex justify-between w-2/12 mod-list"
@@ -597,6 +685,21 @@
                 <button
                     class="w-full cursor-pointer pb-4 text-left text-white text-2xl outline-none border-b border-white acc-list flex justify-between"
                 >
+                    i.Consult
+                    <i class="fa-solid fa-plus text-i4-pink"></i>
+                </button>
+                <div class="panel mt-4 mb-2">
+                    <p>
+                        i4Brands work with clients to provide a service to
+                        ensure they stand out from their competitor. i4Brands
+                        manage and maintain a Brands assets. First impressions
+                        are a key factor when attracting new customers.
+                    </p>
+                </div>
+
+                <button
+                    class="w-full cursor-pointer pb-4 text-left text-white text-2xl outline-none border-b border-white acc-list flex justify-between"
+                >
                     i.Manage
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
@@ -612,7 +715,22 @@
                 <button
                     class="w-full cursor-pointer pb-4 text-left text-white text-2xl outline-none border-b border-white acc-list flex justify-between"
                 >
-                    i.Consult
+                    i.Supply
+                    <i class="fa-solid fa-plus text-i4-pink"></i>
+                </button>
+                <div class="panel mt-4 mb-2">
+                    <p>
+                        i4Brands work with clients to provide a service to
+                        ensure they stand out from their competitor. i4Brands
+                        manage and maintain a Brands assets. First impressions
+                        are a key factor when attracting new customers.
+                    </p>
+                </div>
+
+                <button
+                    class="w-full cursor-pointer pb-4 text-left text-white text-2xl outline-none border-b border-white acc-list flex justify-between"
+                >
+                    i.Install
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
                 <div class="panel mt-4 mb-2">
@@ -643,21 +761,6 @@
                     class="w-full cursor-pointer pb-4 text-left text-white text-2xl outline-none border-b border-white acc-list flex justify-between"
                 >
                     i.Survey
-                    <i class="fa-solid fa-plus text-i4-pink"></i>
-                </button>
-                <div class="panel mt-4 mb-2">
-                    <p>
-                        i4Brands work with clients to provide a service to
-                        ensure they stand out from their competitor. i4Brands
-                        manage and maintain a Brands assets. First impressions
-                        are a key factor when attracting new customers.
-                    </p>
-                </div>
-
-                <button
-                    class="w-full cursor-pointer pb-4 text-left text-white text-2xl outline-none border-b border-white acc-list flex justify-between"
-                >
-                    i.Install
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
                 <div class="panel mt-4 mb-2">
