rounded image corners

--- a/index.html
+++ b/index.html
@@ -138,11 +138,13 @@
                         installation, maintenance and branding service.
                     </p>
 
-                    <img
-                        src="./assets/images/craft-beers-interior.jpg"
-                        alt="interior signage"
-                        class="rounded-lg pt-10 lg:pt-0"
-                    />
+                    <div class="rounded-lg mt-10 lg:mt-0">
+                        <img
+                            src="./assets/images/craft-beers-interior.jpg"
+                            alt="interior signage"
+                            class="object-cover object-center rounded-lg"
+                        />
+                    </div>
                 </div>
 
                 <div class="w-full lg:w-6/12 pt-10 lg:pt-0">
