removed hero image

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </header>
 
-        <section class="pt-20 pb-20 lg:pb-64 relative">
+        <section class="pt-20 pb-0 relative">
             <div class="container">
                 <h1
                     class="text-white text-lg lg:text-2xl text-center font-light tracking-wider"
@@ -57,11 +57,11 @@
                     Charge.
                 </h2>
             </div>
-            <img
+            <!-- <img
                 src="./assets/images/hero - image.svg"
                 alt="Hero background"
                 class="absolute bottom-0 left-0 right-0 -z-10"
-            />
+            /> -->
         </section>
 
         <section class="py-10 lg:py-20">
